--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <h2>About me</h2>
     <p>I am a computer science undergrad from FIT CTU in Prague. I will continue my graduate studies at MFF UK, starting from October 2018.</p>
-    <p>Currently I work at FIT CTU as a programmer for the office of cooperation with industry.</p>
+    <p>Currently I work at FIT CTU as a programmer for the Office of Cooperation with Industry.</p>
     <p>I help organize <a href="https://fiks.fit.cvut.cz/">FIKS</a>, a correspondence seminar for high school students. We are actively looking for new members, so if you are interested in a slightest, do not hesitate and contact us. There aren't any prerequisites for organizers.</p>
 
     <h3>Software</h3>
