--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p>I help organize <a href="https://fiks.fit.cvut.cz/">FIKS</a>, a correspondence seminar for high school students. We are actively looking for new members, so if you are interested in a slightest, do not hesitate and contact us. There aren't any prerequisites for organizers.</p>
 
     <h3>Software</h3>
-    <p>Sometimes I make software. Most of it lives on my <a href="https://github.com/vutunganh">Github account</a>. For an example, this website's is <a href="https://github.com/vutunganh/personal-webpage">here</a>.</p>
+    <p>Sometimes I make software. Most of it lives on my <a href="https://github.com/vutunganh">Github account</a>. For an example, this website's source code is <a href="https://github.com/vutunganh/personal-webpage">here</a>.</p>
     <!-- __END_CONTENT__ -->
   </body>
   <script src="script.js" type="text/javascript"></script>
