--- a/ag1.html
+++ b/ag1.html
@@ -12,13 +12,29 @@ PAGE_TITLE Cvičení předmětu BI-AG1
     <h2>Nějaké obecné kecy</h2>
     <p>Primární informace o předmětu najdete <a href="https://courses.fit.cvut.cz/BI-AG1/index.html">tady</a>. Své známky najdete <a href="https://grades.fit.cvut.cz/courses/BI-AG1/my-classification">tady</a>.</p>
     <p>Kontakt na mě máte v rootu stránky. Zastihnout mě můžete každé úterý v kanceláři <i>341b</i> v Nové budově.</p>
-    <p>Máte-li problém, ozvěte se včas a zkusíme ho spolu nějak vyřešit. Sice vypadám jako děsná svině, ale naučit Vás to chci, takže se nebojte ozvat. Kvůli penězům to fakt nedělám.</p>
+    <p>Máte-li problém, ozvěte se včas a zkusíme ho spolu nějak vyřešit. Sice vypadám jako děsná svině, ale naučit Vás to chci, takže se nebojte ozvat.</p>
     <p>Bonusové body dostanete za vyřešení domácích úkolů nebo za výkon u tabule. Konat u tabule znamená vyřešit úlohu, která je na cvičení zadaná, nebo vyřešit nevyřešenou úlohu z předcházejících cvičení.</p>
 
     <h2>Cvičení 1 - 2018/10/02</h2>
 
-    <h3>Příklady</h3>
-    <p><b>TBD</b></p>
+    <h3>Vyřešené příklady</h3>
+    <ul>
+      <li>Analýza složitostí programů.</li>
+      <li>Existuje 4-regulární graf na 6 vrcholech?</li>
+      <li>Existuje 1-regulární graf na 6 vrcholech?</li>
+      <li>Existuje graf na 5 vrcholech se souborem stupňů 2, 3, 3, 4, 4?</li>
+      <li>Pro jaká n existuje graf na n vrcholech takový, že všechny jeho vrcholy mají různé stupně?</li>
+      <li>Pro jaká n existuje graf na n vrcholech takový, že všechny jeho vrcholy kromě dvou mají různé stupně? Tady přišel nápad od studenta, který se mi na cvičení nepodařilo moc vysvětlit, tak to aspoň zkusím <a href="./oprava.pdf">tady v PDFku</a>.</li>
+      <li>Určete počet neizomorfních grafů na 4 vrcholech.</li>
+      <li>Jsou každé dva (n-1)-regulární grafy izomorfní?</li>
+      <li>Jsou každé dva (n-2)-regulární grafy izomorfní?</li>
+    </ul>
+
+    <h3>Nevyřešené příklady</h3>
+    <ul>
+      <li>Ukažte, že pokud je graf G izomorfní s grafem H, pak i jejich doplňky jsou izomorfní.</li>
+      <li>Jsou každé dva (n-3)-regulární grafy izomorfní?</li>
+    </ul>
 
     <h3>Domácí úkol</h3>
     <ol>
