--- a/ag1.html
+++ b/ag1.html
@@ -10,10 +10,23 @@ PAGE_TITLE Cvičení předmětu BI-AG1
     </header>
     <!-- __BEGIN_CONTENT__ -->
     <h2>Nějaké obecné kecy</h2>
-    <p>Primární informace o předmětu najdete <a href="https://courses.fit.cvut.cz/BI-AG1/index.html">tady</a>. Své známky najdete <a href="https://grades.fit.cvut.cz/courses/BI-AG1/my-classification">tady</a>.</p>
+    <p>Primární informace o předmětu najdete <a href="https://courses.fit.cvut.cz/BI-AG1/index.html">tady</a>. Své známky najdete <a href="https://grades.fit.cvut.cz/courses/BI-AG1/my-classification">tady</a>. Informace o hodnocení předmětu jsem neříkal, můžete si je najít <a href="https://courses.fit.cvut.cz/BI-AG1/classification/index.html">tady</a>.</p>
     <p>Kontakt na mě máte v rootu stránky. Zastihnout mě můžete každé úterý v kanceláři <i>341b</i> v Nové budově.</p>
     <p>Máte-li problém, ozvěte se včas a zkusíme ho spolu nějak vyřešit. Sice vypadám jako děsná svině, ale naučit Vás to chci, takže se nebojte ozvat.</p>
     <p>Bonusové body dostanete za vyřešení domácích úkolů nebo za výkon u tabule. Konat u tabule znamená vyřešit úlohu, která je na cvičení zadaná, nebo vyřešit nevyřešenou úlohu z předcházejících cvičení.</p>
+
+    <h2>Cvičení 2 - 2018/10/10</h2>
+
+    <h3>Co nás nejspíše čeká</h3>
+    <ul>
+      <li>Úlohy na izomorfismy a automorfismy grafů.</li>
+      <li>Nějaké hrátky na návrh algoritmů (minule se dělaly hlavně důkazy nějakých vlastností grafů).</li>
+      <ul>
+        <li>Házení vajíček z paneláku.</li>
+        <li>Hledání dvojic čísel v poli se součtem K.</li>
+        <li>A možná mě napadne něco dalšího.</li>
+      </ul>
+    </ul>
 
     <h2>Cvičení 1 - 2018/10/02</h2>
 
