--- a/ag1.html
+++ b/ag1.html
@@ -17,16 +17,24 @@ PAGE_TITLE Cvičení předmětu BI-AG1
 
     <h2>Cvičení 2 - 2018/10/10</h2>
 
-    <h3>Co nás nejspíše čeká</h3>
+    <h3>Vyřešené příklady</h3>
     <ul>
-      <li>Úlohy na izomorfismy a automorfismy grafů.</li>
-      <li>Nějaké hrátky na návrh algoritmů (minule se dělaly hlavně důkazy nějakých vlastností grafů).</li>
-      <ul>
-        <li>Házení vajíček z paneláku.</li>
-        <li>Hledání dvojic čísel v poli se součtem K.</li>
-        <li>A možná mě napadne něco dalšího.</li>
-      </ul>
+      <li>Dokažte, že graf obsahující kružnici jako podgraf obsahuje jako podgraf i indukovanou kružnici.</li>
+      <li>Existuje nesouvislý graf takový, že i jeho doplněk je nesouvislý?</li>
+      <li>Je dán graf G na alespoň dvou vrcholech a |E(G)| < |V(G)|. Ukažte, že v něm musí existovat vrchol stupně nejvýše jedna.</li>
+      <li>Určete počet všech indukovaných podgrafů grafu K_n.</li>
+      <li>Určete počet všech podgrafů grafu K_n.</li>
+      <li>Je dán graf G na N vrcholech a počet souvislých komponent je C. Ukažte, že 'E(G) >= N - C'. Tady se hodně mávalo rukama, za úkol si to sepište pořádně.</li>
+      <li>Silniční síť obsahuje 2N měst a z každého města vede N silnic (mezi každými 2 městy je nejvýše jedna silnice, silnice nezačíná tam, kde končí). Ukažte, že existuje cesta mezi všemi dvojicemi měst.</li>
+      <li>Házení vajíček.</li>
+      <li>Hledání dvojic prvků v poli se součtem K. A potom v seřazeném poli.</li>
+      <li>Jak modifikovat DFS tak, aby vypsalo nějakou cestu mezi vrcholy u a v.</li>
+      <li>Jsou dána dvě políčka na šachovnici. Dá se koněm dostat z jednoho do druhého?</li>
+      <li>Jsou dána dvě políčka na šachovnici. Dá se kulhavým koněm dostat z jednoho do druhého? Tzn. v lichých tazích se hýbete jako kůň a v sudých jako král.</li>
     </ul>
+
+    <h3>Domácí úkol</h3>
+    <p>Udělat progtest.</p>
 
     <h2>Cvičení 1 - 2018/10/02</h2>
 
@@ -47,6 +55,7 @@ PAGE_TITLE Cvičení předmětu BI-AG1
     <ul>
       <li>Ukažte, že pokud je graf G izomorfní s grafem H, pak i jejich doplňky jsou izomorfní.</li>
       <li>Jsou každé dva (n-3)-regulární grafy izomorfní?</li>
+      <li>Jak vyřešit házení vajíček z paneláku, pokud mám dvě vajíčka?</li>
     </ul>
 
     <h3>Domácí úkol</h3>
