--- a/ag1.html
+++ b/ag1.html
@@ -63,7 +63,7 @@ PAGE_TITLE Cvičení předmětu BI-AG1
     <ol>
       <li>Vytvořte si účet na <a href="https://codeforces.com/">Codeforces</a>.</li>
       <li>Vyřešte úlohu <a href="https://codeforces.com/gym/101908/problem/E">https://codeforces.com/gym/101908/problem/E</a>.</li>
-      <li>Pošlete mi Váš accepted submission na e-mail. Příklad submissionu je například <code>https://codeforces.com/gym/101908/submission/43664220</code>.</li>
+      <li>Pošlete mi Váš accepted submission na e-mail. Příkladem submissionu je <code>https://codeforces.com/gym/101908/submission/43664220</code>.</li>
     </ol>
     Deadline je do třetího cvičení.
     <!-- __END_CONTENT__ -->
