--- a/ag1.html
+++ b/ag1.html
@@ -17,11 +17,15 @@ PAGE_TITLE Cvičení předmětu BI-AG1
 
     <h2>Nevyřešené příklady</h3>
     <ul>
-      <li>Ukažte, že pokud je graf G izomorfní s grafem H, pak i jejich doplňky jsou izomorfní.</li>
       <li>Jsou každé dva (n-3)-regulární grafy izomorfní?</li>
       <li>Jak vyřešit házení vajíček z paneláku, pokud mám dvě vajíčka?</li>
+      <li>Navrhněte algoritmus který zjistí, zda-li je graf bipartitní.</li>
+      <li>Modifikujte algoritmus BFS tak, aby vypsal počet nejkratších cest mezi dvěma vrcholy.</li>
     </ul>
 
+    <h2>Cvičení 3 - 2018/10/17</h2>
+    <p><a href="03.pdf">Zadání úloh</a>.</p>
+    <p>Nevyřešili jsme příklady 8 a 11, k příkladu 6 se příště ještě vrátíme.</p>
 
     <h2>Cvičení 2 - 2018/10/10</h2>
 
