--- a/ag1.html
+++ b/ag1.html
@@ -23,11 +23,17 @@ PAGE_TITLE Cvičení předmětu BI-AG1
       <li>Modifikujte algoritmus BFS tak, aby vypsal počet nejkratších cest mezi dvěma vrcholy.</li>
     </ul>
 
-    <h2>Cvičení 3 - 2018/10/17</h2>
+    <h2>Cvičení 4 - 2018/10/23</h2>
+    <p><a href="04.pdf">Zadání úloh</a>.</p>
+
+    <h3>Domácí úkol</h3>
+    <p><a href="https://codeforces.com/contest/1037/problem/D">Tahle úloha na Codeforces.</a> deadline je do šestého cvičení.</p>
+
+    <h2>Cvičení 3 - 2018/10/16</h2>
     <p><a href="03.pdf">Zadání úloh</a>.</p>
     <p>Nevyřešili jsme příklady 8 a 11, k příkladu 6 se příště ještě vrátíme.</p>
 
-    <h2>Cvičení 2 - 2018/10/10</h2>
+    <h2>Cvičení 2 - 2018/10/9</h2>
 
     <h3>Vyřešené příklady</h3>
     <ul>
