--- a/ag1.html
+++ b/ag1.html
@@ -18,16 +18,19 @@ PAGE_TITLE Cvičení předmětu BI-AG1
     <h2>Nevyřešené příklady</h3>
     <ul>
       <li>Jsou každé dva (n-3)-regulární grafy izomorfní?</li>
-      <li>Jak vyřešit házení vajíček z paneláku, pokud mám dvě vajíčka?</li>
-      <li>Navrhněte algoritmus který zjistí, zda-li je graf bipartitní.</li>
       <li>Modifikujte algoritmus BFS tak, aby vypsal počet nejkratších cest mezi dvěma vrcholy.</li>
     </ul>
 
+    <h2>Cvičení 5 - 2018/10/30</h2>
+    <p><a href="05.pdf">Zadání úloh</a>.</p>
+    Stihli jsme všechno.
+
     <h2>Cvičení 4 - 2018/10/23</h2>
     <p><a href="04.pdf">Zadání úloh</a>.</p>
+    Stihli jsme všechno.
 
     <h3>Domácí úkol</h3>
-    <p><a href="https://codeforces.com/contest/1037/problem/D">Tahle úloha na Codeforces.</a> deadline je do šestého cvičení.</p>
+    <p><a href="https://codeforces.com/contest/1037/problem/D">Tahle úloha na Codeforces.</a> Deadline je do šestého cvičení.</p>
 
     <h2>Cvičení 3 - 2018/10/16</h2>
     <p><a href="03.pdf">Zadání úloh</a>.</p>
