--- a/ag1.html
+++ b/ag1.html
@@ -21,6 +21,10 @@ PAGE_TITLE Cvičení předmětu BI-AG1
       <li>Modifikujte algoritmus BFS tak, aby vypsal počet nejkratších cest mezi dvěma vrcholy.</li>
     </ul>
 
+    <h2>Cvičení 6 - 2018/11/06</h2>
+    <p><a href="06.pdf">Zadání úloh</a>.</p>
+    Stihli jsme všechno.
+
     <h2>Cvičení 5 - 2018/10/30</h2>
     <p><a href="05.pdf">Zadání úloh</a>.</p>
     Stihli jsme všechno.
