--- a/ag1.html
+++ b/ag1.html
@@ -25,6 +25,9 @@ PAGE_TITLE Cvičení předmětu BI-AG1
     <p><a href="06.pdf">Zadání úloh</a>.</p>
     Stihli jsme všechno.
 
+    <h3>Domácí úkol</h3>
+    <p>Udělat progtest.</p>
+
     <h2>Cvičení 5 - 2018/10/30</h2>
     <p><a href="05.pdf">Zadání úloh</a>.</p>
     Stihli jsme všechno.
