--- a/ag1.html
+++ b/ag1.html
@@ -19,7 +19,12 @@ PAGE_TITLE Cvičení předmětu BI-AG1
     <ul>
       <li>Jsou každé dva (n-3)-regulární grafy izomorfní?</li>
       <li>Modifikujte algoritmus BFS tak, aby vypsal počet nejkratších cest mezi dvěma vrcholy.</li>
+      <li>Těžká verze páté úlohy ze sedmého cvičení.</li>
     </ul>
+
+    <h2>Cvičení 7 - 2018/11/13</h2>
+    <p><a href="07.pdf">Zadání úloh</a>.</p>
+    Nestihli jsme těžkou verzi úlohy 5.
 
     <h2>Cvičení 6 - 2018/11/06</h2>
     <p><a href="06.pdf">Zadání úloh</a>.</p>
