--- a/ag1.html
+++ b/ag1.html
@@ -22,6 +22,10 @@ PAGE_TITLE Cvičení předmětu BI-AG1
       <li>Těžká verze páté úlohy ze sedmého cvičení.</li>
     </ul>
 
+    <h2>Cvičení 8 - 2018/11/20</h2>
+    <p><a href="08.pdf">Zadání úloh</a>.</p>
+    Nestihli jsme 8, 3 dovysvětlím, opakovací úlohu taky.
+
     <h2>Cvičení 7 - 2018/11/13</h2>
     <p><a href="07.pdf">Zadání úloh</a>.</p>
     Nestihli jsme těžkou verzi úlohy 5.
