some content updates

--- a/ag1.html
+++ b/ag1.html
@@ -20,7 +20,14 @@ PAGE_TITLE Cvičení předmětu BI-AG1
       <li>Jsou každé dva (n-3)-regulární grafy izomorfní?</li>
       <li>Modifikujte algoritmus BFS tak, aby vypsal počet nejkratších cest mezi dvěma vrcholy.</li>
       <li>Těžká verze páté úlohy ze sedmého cvičení.</li>
+      <li>Jak počítat inverze v poli v čase <i>n log(n)</i>?</li>
     </ul>
+
+    <h2>Cvičení 10 - 2018/12/04</h2>
+    Píšeme písemku.
+
+    <h2>Cvičení 9 - 2018/11/27</h2>
+    <p><a href="09.pdf">Zadání úloh</a>.</p>
 
     <h2>Cvičení 8 - 2018/11/20</h2>
     <p><a href="08.pdf">Zadání úloh</a>.</p>
