--- a/ag1.html
+++ b/ag1.html
@@ -23,34 +23,38 @@ PAGE_TITLE Cvičení předmětu BI-AG1
       <li>Jak počítat inverze v poli v čase <i>n log(n)</i>?</li>
     </ul>
 
+    <h2>Cvičení 11 - 2018/12/11</h2>
+    <p><a href="11.pdf">Zadání úloh</a>.</p>
+    <p>Stihli jsme úlohy 1, 3, 5, 8. K úloze 4 přiště ještě neco řeknu.</p>
+
     <h2>Cvičení 10 - 2018/12/04</h2>
-    Píšeme písemku.
+    <p>Psali jsme písemku, ve výsledku dostalo zápočet 10 lidí z 15.</p>
 
     <h2>Cvičení 9 - 2018/11/27</h2>
     <p><a href="09.pdf">Zadání úloh</a>.</p>
 
     <h2>Cvičení 8 - 2018/11/20</h2>
     <p><a href="08.pdf">Zadání úloh</a>.</p>
-    Nestihli jsme 8, 3 dovysvětlím, opakovací úlohu taky.
+    <p>Nestihli jsme 8, 3 dovysvětlím, opakovací úlohu taky.</p>
 
     <h2>Cvičení 7 - 2018/11/13</h2>
     <p><a href="07.pdf">Zadání úloh</a>.</p>
-    Nestihli jsme těžkou verzi úlohy 5.
+    <p>Nestihli jsme těžkou verzi úlohy 5.</p>
 
     <h2>Cvičení 6 - 2018/11/06</h2>
     <p><a href="06.pdf">Zadání úloh</a>.</p>
-    Stihli jsme všechno.
+    <p>Stihli jsme všechno.</p>
 
     <h3>Domácí úkol</h3>
     <p>Udělat progtest.</p>
 
     <h2>Cvičení 5 - 2018/10/30</h2>
     <p><a href="05.pdf">Zadání úloh</a>.</p>
-    Stihli jsme všechno.
+    <p>Stihli jsme všechno.</p>
 
     <h2>Cvičení 4 - 2018/10/23</h2>
     <p><a href="04.pdf">Zadání úloh</a>.</p>
-    Stihli jsme všechno.
+    <p>Stihli jsme všechno.</p>
 
     <h3>Domácí úkol</h3>
     <p><a href="https://codeforces.com/contest/1037/problem/D">Tahle úloha na Codeforces.</a> Deadline je do šestého cvičení.</p>
