corrections of content

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
 
     <h2>About me</h2>
-    <p>I am a computer science undergrad from FIT CTU in Prague. I will seek my master's degree at MFF UK, starting from October 2018.</p>
+    <p>I obtained a bachelor's degree from FIT CTU in computer science. I will seek my master's degree at MFF UK, starting from October 2018.</p>
     <p>Currently I work at FIT CTU as a programmer for the Office of Cooperation with Industry.</p>
     <p>I tutor the "<a href="./ag1.html">Algorithms and graphs 1</a>" course at FIT CTU.</p>
     <p>I help organize <a href="https://fiks.fit.cvut.cz/">FIKS</a>, a correspondence seminar for high school students. We are actively looking for new members, so if you are interested in a slightest, do not hesitate and contact us. There aren't any prerequisites for organizers.</p>
