--- a/ag1.html
+++ b/ag1.html
@@ -25,7 +25,7 @@ PAGE_TITLE Cvičení předmětu BI-AG1
 
     <h2>Cvičení 11 - 2018/12/11</h2>
     <p><a href="11.pdf">Zadání úloh</a>.</p>
-    <p>Stihli jsme úlohy 1, 3, 5, 8. K úloze 4 přiště ještě neco řeknu.</p>
+    <p>Stihli jsme úlohy 1, 3, 5, 8 neváženou verzi. K úloze 4 přiště ještě neco řeknu.</p>
 
     <h2>Cvičení 10 - 2018/12/04</h2>
     <p>Psali jsme písemku, ve výsledku dostalo zápočet 10 lidí z 15.</p>
