--- a/ag1.html
+++ b/ag1.html
@@ -23,6 +23,10 @@ PAGE_TITLE Cvičení předmětu BI-AG1
       <li>Jak počítat inverze v poli v čase <i>n log(n)</i>?</li>
     </ul>
 
+    <h2>Cvičení 12 (poslední) - 2018/12/18</h2>
+    <p><a href="12.pdf">Zadání úloh</a>.</p>
+    <p>Stihli jsme úlohy 1, 3 (nevím jistě), 4, 5, 7, 8, 11, 12, 13.</p>
+
     <h2>Cvičení 11 - 2018/12/11</h2>
     <p><a href="11.pdf">Zadání úloh</a>.</p>
     <p>Stihli jsme úlohy 1, 3, 5, 8 neváženou verzi. K úloze 4 přiště ještě neco řeknu.</p>
