--- a/ag1.html
+++ b/ag1.html
@@ -10,7 +10,7 @@ PAGE_TITLE Cvičení předmětů BI-AG1
     </header>
     <!-- __BEGIN_CONTENT__ -->
     <ul>
-      <li><a href="./ag1-zs1819.html">Zimní semestr 2018/2019.</a></li>
+      <li><a href="/ag1-zs1819">Zimní semestr 2018/2019.</a></li>
     </ul>
     <!-- __END_CONTENT__ -->
   </body>
