--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <p>I'm studying a Master's programme at <a href="https://www.mff.cuni.cz/en">MFF UK</a>. I will be majoring in computer science.</p>
     <p>I obtained a bachelor's degree from <a href="https://fit.cvut.cz/en">FIT CTU</a> in computer science.</p>
     <p>Currently I work at FIT CTU as a programmer for the Office of Cooperation with Industry.</p>
-    <p>I tutor the "<a href="./ag1.html">Algorithms and graphs 1</a>" course at FIT CTU.</p>
+    <p>I tutor the "<a href="/ag1.html">Algorithms and graphs 1</a>" course at FIT CTU.</p>
     <p>I help organize <a href="https://fiks.fit.cvut.cz/">FIKS</a>, a correspondence seminar for high school students. We are actively looking for new members, so if you are interested in a slightest, do not hesitate and contact us. There aren't any prerequisites for organizers.</p>
 
     <h3>Software</h3>
