bad mailto link to fight spam

--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,7 @@
 
     <h2>Contact</h2>
     <ul>
-      <li>e-mail: <a href="mailto:vu.tunganh96@gmail.com"><i>vu.tunganh96(at)gmail.com</i></a>, <a href="mailto:vutungan@fit.cvut.cz"><i>vutungan(at)fit.cvut.cz</i></a> (might stop working in the future),</li>
+      <li>e-mail: <a href="mailto:vu.tunganh96(at)gmail.com"><i>vu.tunganh96(at)gmail.com</i></a>, <a href="mailto:vutungan(at)fit.cvut.cz"><i>vutungan(at)fit.cvut.cz</i></a> (might stop working in the future),</li>
       <li>twitter: <a href="https://twitter.com/tunganhvu96"><i>@tunganhvu96</i></a>.</li>
     </ul>
 
