ag1: everything is tex now

--- a/pages/ag1-zs1819/index.html
+++ b/pages/ag1-zs1819/index.html
@@ -14,6 +14,7 @@ PAGE_TITLE Cvičení předmětu BI-AG1 v ZS 18/19
     <p>Kontakt na mě máte v rootu stránky. Zastihnout mě můžete každé úterý v kanceláři <i>341b</i> v Nové budově.</p>
     <p>Máte-li problém, ozvěte se včas a zkusíme ho spolu nějak vyřešit. Sice vypadám jako děsná svině, ale naučit Vás to chci, takže se nebojte ozvat.</p>
     <p>Bonusové body dostanete za vyřešení domácích úkolů nebo za výkon u tabule. Konat u tabule znamená vyřešit úlohu, která je na cvičení zadaná, nebo vyřešit nevyřešenou úlohu z předcházejících cvičení.</p>
+    <p><a href="ag1.pdf">Odkaz na všechny příklady v jednom souboru.</a></p>
 
     <h2>Nevyřešené příklady</h3>
     <ul>
@@ -68,40 +69,15 @@ PAGE_TITLE Cvičení předmětu BI-AG1 v ZS 18/19
     <p>Nevyřešili jsme příklady 8 a 11, k příkladu 6 se příště ještě vrátíme.</p>
 
     <h2>Cvičení 2 - 2018/10/9</h2>
-
-    <h3>Vyřešené příklady</h3>
-    <ul>
-      <li>Dokažte, že graf obsahující kružnici jako podgraf obsahuje jako podgraf i indukovanou kružnici.</li>
-      <li>Existuje nesouvislý graf takový, že i jeho doplněk je nesouvislý?</li>
-      <li>Je dán graf G na alespoň dvou vrcholech a |E(G)| < |V(G)|. Ukažte, že v něm musí existovat vrchol stupně nejvýše jedna.</li>
-      <li>Určete počet všech indukovaných podgrafů grafu K_n.</li>
-      <li>Určete počet všech podgrafů grafu K_n.</li>
-      <li>Je dán graf G na N vrcholech a počet souvislých komponent je C. Ukažte, že 'E(G) >= N - C'. Tady se hodně mávalo rukama, za úkol si to sepište pořádně.</li>
-      <li>Silniční síť obsahuje 2N měst a z každého města vede N silnic (mezi každými 2 městy je nejvýše jedna silnice, silnice nezačíná tam, kde končí). Ukažte, že existuje cesta mezi všemi dvojicemi měst.</li>
-      <li>Házení vajíček.</li>
-      <li>Hledání dvojic prvků v poli se součtem K. A potom v seřazeném poli.</li>
-      <li>Jak modifikovat DFS tak, aby vypsalo nějakou cestu mezi vrcholy u a v.</li>
-      <li>Jsou dána dvě políčka na šachovnici. Dá se koněm dostat z jednoho do druhého?</li>
-      <li>Jsou dána dvě políčka na šachovnici. Dá se kulhavým koněm dostat z jednoho do druhého? Tzn. v lichých tazích se hýbete jako kůň a v sudých jako král.</li>
-    </ul>
+    <p><a href="02.pdf">Zadání úloh</a>.</p>
+    <p>Vyřešili jsme všechno.</p>
 
     <h3>Domácí úkol</h3>
     <p>Udělat progtest.</p>
 
     <h2>Cvičení 1 - 2018/10/02</h2>
-
-    <h3>Vyřešené příklady</h3>
-    <ul>
-      <li>Analýza složitostí programů.</li>
-      <li>Existuje 4-regulární graf na 6 vrcholech?</li>
-      <li>Existuje 1-regulární graf na 6 vrcholech?</li>
-      <li>Existuje graf na 5 vrcholech se souborem stupňů 2, 3, 3, 4, 4?</li>
-      <li>Pro jaká n existuje graf na n vrcholech takový, že všechny jeho vrcholy mají různé stupně?</li>
-      <li>Pro jaká n existuje graf na n vrcholech takový, že všechny jeho vrcholy kromě dvou mají různé stupně? Tady přišel nápad od studenta, který se mi na cvičení nepodařilo moc vysvětlit, tak to aspoň zkusím <a href="./oprava.pdf">tady v PDFku</a>.</li>
-      <li>Určete počet neizomorfních grafů na 4 vrcholech.</li>
-      <li>Jsou každé dva (n-1)-regulární grafy izomorfní?</li>
-      <li>Jsou každé dva (n-2)-regulární grafy izomorfní?</li>
-    </ul>
+    <p><a href="01.pdf">Zadání úloh.</a></p>
+    <p>Vyřešili jsme všechno kromě posledního příkladu.</p>
 
     <h3>Domácí úkol</h3>
     <ol>
