--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
     </ul>
 
     <h2>About me</h2>
-    <p>I'm studying a Master's programme at <a href="https://www.mff.cuni.cz/en">MFF UK</a>. I will be majoring in computer science.</p>
+    <p>I'm studying a computer science master's programme at <a href="https://www.mff.cuni.cz/en">MFF UK</a>.</p>
     <p>I obtained a bachelor's degree from <a href="https://fit.cvut.cz/en">FIT CTU</a> in computer science.</p>
     <p>Currently I work at FIT CTU as a programmer for the Office of Cooperation with Industry.</p>
     <p>I tutor the "<a href="/ag1.html">Algorithms and graphs 1</a>" course at FIT CTU.</p>
