--- a/pages/competitive-programming.html
+++ b/pages/competitive-programming.html
@@ -10,9 +10,11 @@
     <!-- __BEGIN_CONTENT__ -->
     <h2>Competitive programming</h2>
     <p>For an example my <a href="http://codeforces.com">Codeforces</a> account is <a href="http://codeforces.com/profile/vu.tunganh96">vu.tunganh96</a>, but I often practice on other accounts as well.</p>
-    <p>I competed in Google's HashCode 2018 and placed 725th out of 4856 teams. It was my first optimalization problem competition, so I'm quite pleased with the result.</p>
+    <p>I competed in Google's HashCode 2018 and placed 725th out of 4856 teams.</p>
     <p><a href="http://bit.ly/2z17Rqh">I finished at the 8th place (silver medal) at CTU Open 2017.</a></p>
     <p>I attended CERC 2017 with poor results. Hopefully I will improve by next year :).</p>
+    <p><a href="https://photos.app.goo.gl/iLsnmFqDFaKeGzsz5">I finished in the 4th place in the unofficial round of CTU Open 2018.</a></p>
+    <p>I competed in Google's HashCode 2018 and placed 303th out of 6671 teams.</p>
     <!-- __END_CONTENT__ -->
   </body>
 </html>
